--- a/style.css
+++ b/style.css
@@ -573,7 +573,7 @@ h2, h2::before{
   background-color: #B0B1AA;
 
   /* Your bottom image */
-  background: url('images/try7.png') center 15% / cover no-repeat;
+  background: url('try7.png') center 15% / cover no-repeat;
 
 
 
